@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2023-09-30T08:10:36Z",
+  "count" : 49,
+  "count_minmax" : [ 49, 49 ],
+  "count_decinc" : [ -0, +49 ],
+  "uniques" : 12,
+  "uniques_minmax" : [ 12, 12 ],
+  "uniques_decinc" : [ -0, +12 ]
+}
