@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-09-30T00:42:03Z",
+  "timestamp" : "2023-09-30T08:10:36Z",
   "count_outdated" : 5078,
   "uniques_outdated" : 1578,
-  "count" : 5345,
-  "uniques" : 1702,
+  "count" : 5394,
+  "uniques" : 1714,
   "clones" : [
     {
       "timestamp": "2023-09-16T00:00:00Z",
-      "count": 62,
+      "count": 61,
       "count_minmax": [ 1, 62 ],
-      "count_decinc": [ 0, 62 ],
-      "uniques": 11,
+      "count_decinc": [ 1, 62 ],
+      "uniques": 10,
       "uniques_minmax": [ 1, 11 ],
-      "uniques_decinc": [ 0, 11 ]
+      "uniques_decinc": [ 1, 11 ]
     },
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 10,
       "uniques_minmax": [ 4, 10 ],
       "uniques_decinc": [ 0, 10 ]
+    },
+    {
+      "timestamp": "2023-09-30T00:00:00Z",
+      "count": 49,
+      "count_minmax": [ 49, 49 ],
+      "count_decinc": [ 0, 49 ],
+      "uniques": 12,
+      "uniques_minmax": [ 12, 12 ],
+      "uniques_decinc": [ 0, 12 ]
     }
   ]
 }
