@@ -1,11 +1,11 @@
 {
-  "count": 267,
-  "uniques": 87,
+  "count": 315,
+  "uniques": 91,
   "clones": [
     {
       "timestamp": "2023-09-16T00:00:00Z",
-      "count": 62,
-      "uniques": 11
+      "count": 61,
+      "uniques": 10
     },
     {
       "timestamp": "2023-09-17T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 35,
       "uniques": 10
+    },
+    {
+      "timestamp": "2023-09-30T00:00:00Z",
+      "count": 49,
+      "uniques": 12
     }
   ]
 }
