@@ -1,3 +1,12 @@
+2023-09-30T08:10:36Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6361437568 # 1941
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
+* notice: last 14d: unq all: 91 315
+* notice: prev accum: outdated-unq outdated-all / unq all: 1578 5078 / 1702 5345
+* notice: next accum: outdated-unq outdated-all / unq all: 1578 5078 / 1714 5394
+* notice: prev exec diff / last date diff / accum: unq all: +12 +49 -1 -1 / +12 +49 -0 -0 / 12 49
+* notice: removed / changed dates: [] / [2023-09-16 2023-09-30]
+
 2023-09-30T00:42:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6358811786 # 1940
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
